--- a/package.json
+++ b/package.json
@@ -1,39 +1,62 @@
 {
-  "name": "nvsmtpatrans",
-  "version": "0.0.1",
-  "private": true,
-  "scripts": {
-    "android": "react-native run-android",
-    "ios": "react-native run-ios",
-    "lint": "eslint .",
-    "start": "react-native start",
-    "test": "jest"
-  },
-  "dependencies": {
-    "react": "19.0.0",
-    "react-native": "0.78.1"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.25.2",
-    "@babel/preset-env": "^7.25.3",
-    "@babel/runtime": "^7.25.0",
-    "@react-native-community/cli": "15.0.1",
-    "@react-native-community/cli-platform-android": "15.0.1",
-    "@react-native-community/cli-platform-ios": "15.0.1",
-    "@react-native/babel-preset": "0.78.1",
-    "@react-native/eslint-config": "0.78.1",
-    "@react-native/metro-config": "0.78.1",
-    "@react-native/typescript-config": "0.78.1",
-    "@types/jest": "^29.5.13",
-    "@types/react": "^19.0.0",
-    "@types/react-test-renderer": "^19.0.0",
-    "eslint": "^8.19.0",
-    "jest": "^29.6.3",
-    "prettier": "2.8.8",
-    "react-test-renderer": "19.0.0",
-    "typescript": "5.0.4"
-  },
-  "engines": {
-    "node": ">=18"
-  }
+    "name": "nvsmtpatrans",
+    "version": "0.0.1",
+    "private": true,
+    "scripts": {
+        "android": "react-native run-android",
+        "ios": "react-native run-ios",
+        "lint": "eslint .",
+        "start": "react-native start",
+        "test": "jest"
+    },
+    "dependencies": {
+        "@react-native-community/checkbox": "^0.5.17",
+        "@react-native-community/cli": "latest",
+        "@react-native/gradle-plugin": "^0.78.2",
+        "@react-navigation/bottom-tabs": "^6.2.29",
+        "@react-navigation/drawer": "^6.6.0",
+        "@react-navigation/material-bottom-tabs": "^6.2.29",
+        "@react-navigation/native": "^6.1.0",
+        "@react-navigation/native-stack": "^6.9.0",
+        "react": "19.0.0",
+        "react-native": "^0.78.2",
+        "react-native-animatable": "^1.4.0",
+        "react-native-elements": "^3.4.3",
+        "react-native-fused-location": "^1.1.2",
+        "react-native-geolocation-service": "^5.3.1",
+        "react-native-linear-gradient": "^2.6.2",
+        "react-native-loading-spinner-overlay": "^3.0.1",
+        "react-native-maps": "1.10.0",
+        "react-native-maps-directions": "^1.9.0",
+        "react-native-paper": "^5.0.0",
+        "react-native-safe-area-context": "^5.1.0",
+        "react-native-snap-carousel": "^1.3.1",
+        "react-native-vector-icons": "^10.0.0"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.25.2",
+        "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
+        "@babel/plugin-proposal-optional-chaining": "^7.21.0",
+        "@babel/runtime": "^7.25.0",
+        "@react-native-community/cli": "15.0.1",
+        "@react-native-community/cli-platform-android": "15.0.1",
+        "@react-native-community/cli-platform-ios": "15.0.1",
+        "@react-native/babel-preset": "0.78.1",
+        "@react-native/eslint-config": "0.78.1",
+        "@react-native/metro-config": "0.78.1",
+        "@react-native/typescript-config": "0.78.1",
+        "@types/jest": "^29.5.13",
+        "@types/react": "^19.0.0",
+        "@types/react-test-renderer": "^19.0.0",
+        "eslint": "^8.19.0",
+        "jest": "^29.6.3",
+        "metro": "^0.82.0",
+        "prettier": "2.8.8",
+        "react-native-gradle-plugin": "^0.71.19",
+        "react-test-renderer": "19.0.0",
+        "typescript": "5.0.4"
+    },
+    "engines": {
+        "node": ">=18"
+    }
 }
